[project]
name = "sports-program"
version = "0.1.0"
description = ""
authors = [
    { name = "leco", email = "lcosta.sp.br@gmail.com" },
    { name = "Welyab Paula", email = "welyab.exe@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi (>=0.123.5,<0.124.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "slack-bolt (>=1.27.0,<2.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "tzdata (>=2024.2,<2025.0)"
]


[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pylint = "^3.3.6"
coverage = "^7.8.0"
ruff = "^0.9.0"
pytest-cov = "^7.0.0"
freezegun = "^1.5.5"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort (import sorting)
    "B", # flake8-bugbear
    "UP", # pyupgrade (upgrades syntax for newer python versions)
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
omit = [
    "app/main.py",
    "app/core/config.py",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=html --cov-report=term-missing"
pythonpath = ["."]
